# nfqdns

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-please.yml
scripts/: ci-local.sh  install.sh
src/: config.rs  dns.rs  domain_list.rs  error.rs  main.rs  packet.rs  protocol.rs  rawsock.rs
testdata/: tunnel.txt  whitelist.txt
tests/: protocol_test.rs
