[package]
name = "nfqdns"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "DNS interceptor for Linux L2 bridge via NFQUEUE"

[dependencies]
nfq = "0.2"
simple-dns = "0.11"
etherparse = "0.19"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
