[package]
name = "nfqdns"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "DNS traffic classifier for L2 bridge via AF_PACKET"

[dependencies]
simple-dns = "0.11"
etherparse = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
